Updated l5-swagger.php file to uncomment authorization logic in swagger
